OAK-10617: remove use of guava from modified classes